--- a/pages/testsmelldetector.html
+++ b/pages/testsmelldetector.html
@@ -30,7 +30,7 @@
     <li><a href="testsmells.html">Test Smell Types</a></li>
     <li><a href="testsmellexamples.html">Test Smell Examples</a></li>
     <li><a class="active" href="testsmelldetector.html">Test Smell Detector</a></li>
-    <li class="right"><a href="about.html">About</a></li>
+    <li><a href="about.html">About</a></li>
 </ul>
 
 <!-- Header -->
@@ -40,6 +40,33 @@
         <h1 class="w3-xxxlarge w3-animate-bottom">Test Smell Detector</h1>
     </div>
 </header>
+<div class="w3-center w3-padding-32">
+    <div class="w3-card w3-container w3-justify w3-padded-box">
+        <a href="https://github.com/TestSmells/TestSmellDetector"><img
+                style="position: absolute; top: 0; right: 0; border: 0;"
+                src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
+                alt="Fork me on GitHub"></a>
+
+
+        <p>
+            The source code for the test smell detection tool, tsDetect, is maintained on a publically accessible GitHub
+            repository. Feel free to download/fork the repository. Updates and extensions to the tool are most
+            definitely encouraged!
+        </p>
+        <div class="w3-container w3-third w3-margin-top w3-margin-bottom w3-center">
+            <iframe src="https://ghbtns.com/github-btn.html?user=TestSmells&type=follow&count=true&size=large"
+                    frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
+        </div>
+        <div class="w3-container w3-third w3-margin-top w3-margin-bottom w3-center">
+            <iframe src="https://ghbtns.com/github-btn.html?user=TestSmells&repo=TestSmellDetector&type=watch&count=true&size=large&v=2"
+                    frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+        </div>
+        <div class="w3-container w3-third w3-margin-top w3-margin-bottom w3-center">
+            <iframe src="https://ghbtns.com/github-btn.html?user=TestSmells&repo=TestSmellDetector&type=fork&count=true&size=large"
+                    frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+        </div>
+    </div>
+</div>
 
 <footer class="w3-container w3-teal w3-footer w3-animate-opacity">
     <p class="w3-small">
