--- a/pages/testsmellexamples.html
+++ b/pages/testsmellexamples.html
@@ -155,6 +155,261 @@ public void testCloneNonBareRepoFromLocalTestServer() throws Exception {
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
+        <div class="w3-container" id="ConstructorInitialization">
+            <h5>Constructor Initialization</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="DefaultTest">
+            <h5>Default Test</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="DuplicateAssert">
+            <h5>Duplicate Assert</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="EagerTest">
+            <h5>Eager Test</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="EmptyTest">
+            <h5>Empty Test</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="ExceptionHandling">
+            <h5>Exception Handling</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="GeneralFixture">
+            <h5>General Fixture</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="IgnoredTest">
+            <h5>Ignored Test</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="LazyTest">
+            <h5>Lazy Test</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="MagicNumberTest">
+            <h5>Magic Number Test</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="MysteryGuest">
+            <h5>Mystery Guest</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="RedundantPrint">
+            <h5>Redundant Print</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="RedundantAssertion">
+            <h5>Redundant Assertion</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="ResourceOptimism">
+            <h5>Resource Optimism</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="SensitiveEquality">
+            <h5>Sensitive Equality</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="SleepyTest">
+            <h5>Sleepy Test</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
+        <div class="w3-container" id="UnknownTest">
+            <h5>Unknown Test</h5>
+            <pre><code class="java">
+
+            </code></pre>
+            <p>
+                Rationale: xx
+            </p>
+            <p>
+                <span class=" w3-small w3-left-align">Original File(s):<a
+                        href=""
+                        target="_blank">xx</a></span>
+                <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
+            </p>
+        </div>
     </div>
 </div>
 
