--- a/pages/testsmellexamples.html
+++ b/pages/testsmellexamples.html
@@ -134,7 +134,7 @@ public void testCloneNonBareRepoFromLocalTestServer() throws Exception {
                 failure is not straightforward.
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/rtyley/agit/blob/fc99d8eaa42940198589b032a2b9ba74d9ce3094/agit-integration-tests/src/main/java/com/madgag/agit/GitAsyncTaskTest.java"
                         target="_blank">GitAsyncTaskTest.java</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -145,7 +145,6 @@ public void testCloneNonBareRepoFromLocalTestServer() throws Exception {
             <pre><code class="java">
 @Test
 public void testSpinner() {
-
     for (Map.Entry<String, String> entry : sourcesMap.entrySet()) {
 
         String id = entry.getKey();
@@ -175,7 +174,7 @@ public void testSpinner() {
                 maintenance of the test.
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/Tyde/TuCanMobile/blob/dbee8a0a738400427bb94e5bc38a9970687ac147/app/src/test/java/com/dalthed/tucan/EventsScraperTest.java"
                         target="_blank">EventsScraperTest.java</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -185,7 +184,6 @@ public void testSpinner() {
             <h5>Constructor Initialization</h5>
             <pre><code class="java">
 public class TagEncodingTest extends BrambleTestCase {
-
 	private final CryptoComponent crypto;
 	private final SecretKey tagKey;
 	private final long streamNumber = 1234567890;
@@ -212,7 +210,7 @@ public class TagEncodingTest extends BrambleTestCase {
                 Rationale: The test class utilizes a constructor instead of a setUp method to initialize fields.
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href="https://code.briarproject.org/akwizgran/briar/blob/0327d4f38a16b09be7cb2578d7c6f694093e65df/bramble-core/src/test/java/org/briarproject/bramble/crypto/TagEncodingTest.java"
                         target="_blank">TagEncodingTest.java</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -246,7 +244,7 @@ public class ExampleUnitTest {
                 The developer should rename this test class (and remove the example test method).
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/httpdispatch/MissedNotificationsReminder/blob/350c3a8fbab935a733d371860e86a937c1d17b2c/app/src/test/java/com/app/missednotificationsreminder/ExampleUnitTest.java"
                         target="_blank">ExampleUnitTest.java</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -291,7 +289,7 @@ public void testXmlSanitizer() {
                 'Frützbüx is invalid' and 'Minus is valid' multiple times in the same test method.
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href="https://github.com/openbmap/radiocells-scanner-android/blob/d6353829f786180ec5ba548ed2adf747e816f735/android/app/src/test/java/org/openbmap/utils/XmlSanitizerTest.java"
                         target="_blank">XmlSanitizerTest.java</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -300,15 +298,23 @@ public void testXmlSanitizer() {
         <div class="w3-container" id="EagerTest">
             <h5>Eager Test</h5>
             <pre><code class="java">
-
+@Test
+public void NmeaSentence_GPGSA_ReadValidValues(){
+    NmeaSentence nmeaSentence = new NmeaSentence("$GPGSA,A,3,04,05,,09,12,,,24,,,,,2.5,1.3,2.1*39");
+    assertThat("GPGSA - read PDOP", nmeaSentence.getLatestPdop(), is("2.5"));
+    assertThat("GPGSA - read HDOP", nmeaSentence.getLatestHdop(), is("1.3"));
+    assertThat("GPGSA - read VDOP", nmeaSentence.getLatestVdop(), is("2.1"));
+}
             </code></pre>
             <p>
-                Rationale: xx
+                Rationale: In this test method, NmeaSentence_GPGSA_ReadValidValues(), the developer calls multiple
+                methods of the production class. Testing multiple methods of the production class in a single test
+                method causes confusion as to what exactly the test method is testing.
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
-                        href=""
-                        target="_blank">xx</a></span>
+                <span class=" w3-small w3-left-align">Original File:<a
+                        href="https://github.com/mendhak/gpslogger/blob/d3252604b204e0995254c6f40599de470bacd76b/gpslogger/src/test/java/com/mendhak/gpslogger/loggers/nmea/NmeaSentenceTest.java"
+                        target="_blank">NmeaSentenceTest.java</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
@@ -321,7 +327,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -336,7 +342,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -351,7 +357,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -366,7 +372,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -381,7 +387,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -396,7 +402,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -411,7 +417,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -426,7 +432,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -441,7 +447,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -456,7 +462,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -471,7 +477,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -486,7 +492,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
@@ -501,7 +507,7 @@ public void testXmlSanitizer() {
                 Rationale: xx
             </p>
             <p>
-                <span class=" w3-small w3-left-align">Original File(s):<a
+                <span class=" w3-small w3-left-align">Original File:<a
                         href=""
                         target="_blank">xx</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
