added example for Empty Test

--- a/pages/testsmellexamples.html
+++ b/pages/testsmellexamples.html
@@ -321,15 +321,20 @@ public void NmeaSentence_GPGSA_ReadValidValues(){
         <div class="w3-container" id="EmptyTest">
             <h5>Empty Test</h5>
             <pre><code class="java">
-
+public void testCredGetFullSampleV1() throws Throwable{
+//        ScrapedCredentials credentials =  innerCredTest(FULL_SAMPLE_v1);
+//        assertEquals("p4ssw0rd", credentials.pass);
+//        assertEquals("user@example.com",credentials.user);
+}
             </code></pre>
             <p>
-                Rationale: xx
+                Rationale: The test method, testCredGetFullSampleV1(), contains only comments (i.e. no executable
+                statements). A test method without executable statements will be marked as passing when executed.
             </p>
             <p>
                 <span class=" w3-small w3-left-align">Original File:<a
-                        href=""
-                        target="_blank">xx</a></span>
+                        href="https://github.com/activems/clipcaster/blob/38398d1d047a4064a7017ca8f0d0f3ff0782560c/app/src/androidTest/java/com/actisec/clipcaster/parser/LastPassParserTest.java"
+                        target="_blank">LastPassParserTest.java</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
