added example for Lazy Test

--- a/pages/testsmellexamples.html
+++ b/pages/testsmellexamples.html
@@ -445,15 +445,35 @@ public void testIsCA() {
         <div class="w3-container" id="LazyTest">
             <h5>Lazy Test</h5>
             <pre><code class="java">
+@Test
+public void testDecrypt() throws Exception {
+    FileInputStream file = new FileInputStream(ENCRYPTED_DATA_FILE_4_14);
+    byte[] enfileData = new byte[file.available()];
+    FileInputStream input = new FileInputStream(DECRYPTED_DATA_FILE_4_14);
+    byte[] fileData = new byte[input.available()];
+    input.read(fileData);
+    input.close();
+    file.read(enfileData);
+    file.close();
+    String expectedResult = new String(fileData, "UTF-8");
+    assertEquals("Testing simple decrypt",expectedResult, Cryptographer.decrypt(enfileData, "test"));
+}
 
+@Test
+public void testEncrypt() throws Exception {
+    String xml = readFileAsString(DECRYPTED_DATA_FILE_4_14);
+    byte[] encrypted = Cryptographer.encrypt(xml, "test");
+    String decrypt = Cryptographer.decrypt(encrypted, "test");
+    assertEquals(xml, decrypt);
+}
             </code></pre>
             <p>
-                Rationale: xx
+                Rationale: Both test methods, testDecrypt() and testEncrypt(), call the same SUT method, Cryptographer.decrypt().
             </p>
             <p>
                 <span class=" w3-small w3-left-align">Original File:<a
-                        href=""
-                        target="_blank">xx</a></span>
+                        href="https://github.com/MarmaladeSky/aRevelation/blob/950309c589d55b3fc8c879d548bae2224d558668/src/test/java/com/github/marmaladesky/tests/CryptographerTest.java"
+                        target="_blank">CryptographerTest.java</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
