--- a/pages/testsmellexamples.html
+++ b/pages/testsmellexamples.html
@@ -588,15 +588,32 @@ public void testTrue() {
         <div class="w3-container" id="SensitiveEquality">
             <h5>Sensitive Equality</h5>
             <pre><code class="java">
+@Test
+public void test1() throws UnknownHostException {
 
+    String peersPacket = "F8 4E 11 F8 4B C5 36 81 " +
+        "CC 0A 29 82 76 5F B8 40 D8 D6 0C 25 80 FA 79 5C " +
+        "FC 03 13 EF DE BA 86 9D 21 94 E7 9E 7C B2 B5 22 " +
+        "F7 82 FF A0 39 2C BB AB 8D 1B AC 30 12 08 B1 37 " +
+        "E0 DE 49 98 33 4F 3B CF 73 FA 11 7E F2 13 F8 74 " +
+        "17 08 9F EA F8 4C 21 B0";
+
+    byte[] payload = Hex.decode(peersPacket);
+
+    byte[] ip = decodeIP4Bytes(payload, 5);
+
+    assertEquals(InetAddress.getByAddress(ip).toString(), ("/54.204.10.41"));
+}
             </code></pre>
             <p>
-                Rationale: xx
+                Rationale: Use of the default value returned by an objects toString() method, to perform string
+                comparisons, runs the risk of failure in the future due to changes in the objects implementation of the
+                toString() method.
             </p>
             <p>
                 <span class=" w3-small w3-left-align">Original File:<a
-                        href=""
-                        target="_blank">xx</a></span>
+                        href="https://github.com/liveplayergames/UFP/blob/master/android/ethereumj-core/src/test/java/org/ethereum/util/RLPTest.java"
+                        target="_blank">RLPTest.java</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
@@ -621,12 +638,12 @@ public void testTrue() {
 
             </code></pre>
             <p>
-                Rationale: xx
+                Rationale:
             </p>
             <p>
                 <span class=" w3-small w3-left-align">Original File:<a
                         href=""
-                        target="_blank">xx</a></span>
+                        target="_blank"></a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
