--- a/pages/testsmellexamples.html
+++ b/pages/testsmellexamples.html
@@ -620,15 +620,35 @@ public void test1() throws UnknownHostException {
         <div class="w3-container" id="SleepyTest">
             <h5>Sleepy Test</h5>
             <pre><code class="java">
-
+public void testEdictExternSearch() throws Exception {
+    final Intent i = new Intent(getInstrumentation().getContext(), ResultActivity.class);
+    i.setAction(ResultActivity.EDICT_ACTION_INTERCEPT);
+    i.putExtra(ResultActivity.EDICT_INTENTKEY_KANJIS, "空白");
+	tester.startActivity(i);
+	assertTrue(tester.getText(R.id.textSelectedDictionary).contains("Default"));
+	final ListView lv = getActivity().getListView();
+	assertEquals(1, lv.getCount());
+	DictEntry entry = (DictEntry) lv.getItemAtPosition(0);
+	assertEquals("Searching", entry.english);
+	Thread.sleep(500);
+	final Intent i2 = getStartedActivityIntent();
+	final List<DictEntry> result = (List<DictEntry>) i2.getSerializableExtra(ResultActivity.INTENTKEY_RESULT_LIST);
+	entry = result.get(0);
+	assertEquals("(adj-na,n,adj-no) blank space/vacuum/space/null (NUL)/(P)", entry.english);
+	assertEquals("空白", entry.getJapanese());
+	assertEquals("くうはく", entry.reading);
+	assertEquals(1, result.size());
+}
             </code></pre>
             <p>
-                Rationale: xx
+                Rationale: The developer causes an artificial delay in test execution using Thread.sleep(). Without
+                comments, it is assumed that the developer performs the delay to stimulate an actual activity (i.e.
+                searching).
             </p>
             <p>
                 <span class=" w3-small w3-left-align">Original File:<a
-                        href=""
-                        target="_blank">xx</a></span>
+                        href="https://github.com/mvysny/aedict/blob/a28dc4d98962d5d8930f3be42d9e2d7b55619c42/aedict-apk-test/src/sk/baka/aedict/ResultActivityTest.java"
+                        target="_blank">ResultActivityTest.java</a></span>
                 <span class=" w3-large w3-right"><a href="#SmellList"><i class="fa fa-arrow-circle-up"></i></a></span>
             </p>
         </div>
